Added simple csv output result.

--- a/notebooks/simple_grouping.ipynb
+++ b/notebooks/simple_grouping.ipynb
@@ -352,118 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>full_address</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>state</th>\n",
-       "      <th>city</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">alabama</th>\n",
-       "      <th>abbeville</th>\n",
-       "      <td>[us highway 431 s_2716_36310, us-431 south_271...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>adamsville</th>\n",
-       "      <td>[veterans memorial dr_5721_35005]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alabaster</th>\n",
-       "      <td>[s colonial dr_205_35007, 1st ave n_1493_35007...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>albertville</th>\n",
-       "      <td>[hwy 431_7375_35950, hwy 431_7375_35950, us hi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alexander city</th>\n",
-       "      <td>[us-280_4094_35010, hwy 280_4094_35010, hwy 28...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">wyoming</th>\n",
-       "      <th>sheridan</th>\n",
-       "      <td>[coffeen ave_2146_82801, n main st_2590_82801,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>thermopolis</th>\n",
-       "      <td>[shoshoni st_611_82443]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>torrington</th>\n",
-       "      <td>[e valley rd_800_82240, east valley highway_80...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>worland</th>\n",
-       "      <td>[big horn ave_1700_82401]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>york</th>\n",
-       "      <th>new</th>\n",
-       "      <td>[astoria blvd_88-05_11369, continental ave_106...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13026 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                             full_address\n",
-       "state   city                                                             \n",
-       "alabama abbeville       [us highway 431 s_2716_36310, us-431 south_271...\n",
-       "        adamsville                      [veterans memorial dr_5721_35005]\n",
-       "        alabaster       [s colonial dr_205_35007, 1st ave n_1493_35007...\n",
-       "        albertville     [hwy 431_7375_35950, hwy 431_7375_35950, us hi...\n",
-       "        alexander city  [us-280_4094_35010, hwy 280_4094_35010, hwy 28...\n",
-       "...                                                                   ...\n",
-       "wyoming sheridan        [coffeen ave_2146_82801, n main st_2590_82801,...\n",
-       "        thermopolis                               [shoshoni st_611_82443]\n",
-       "        torrington      [e valley rd_800_82240, east valley highway_80...\n",
-       "        worland                                 [big horn ave_1700_82401]\n",
-       "york    new             [astoria blvd_88-05_11369, continental ave_106...\n",
-       "\n",
-       "[13026 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_relabeled[[\"state\",\"city\",\"full_address\"]].groupby([\"state\",\"city\"]).agg(list)"
+    "df_final = data_relabeled[[\"state\",\"city\",\"full_address\"]].groupby([\"state\",\"city\"]).agg(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.to_csv(\"../data/results_simple_grouping.csv\")"
    ]
   },
   {
