there's no fairview road entry for south carolina

--- a/notebooks/simple_grouping.ipynb
+++ b/notebooks/simple_grouping.ipynb
@@ -219,6 +219,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>road</th>\n",
+       "      <th>house_number</th>\n",
+       "      <th>postcode</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7431</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>ne main st</td>\n",
+       "      <td>924</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8966</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>fairview rd</td>\n",
+       "      <td>692</td>\n",
+       "      <td>29680</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14361</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>north east main street</td>\n",
+       "      <td>924</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18614</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>fairview rd</td>\n",
+       "      <td>692</td>\n",
+       "      <td>29680</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19817</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>south street</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30658</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>south st</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31639</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>fairview rd</td>\n",
+       "      <td>692</td>\n",
+       "      <td>29680</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35700</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>south st</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40578</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>ne main st</td>\n",
+       "      <td>924</td>\n",
+       "      <td>29681</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62692</th>\n",
+       "      <td>simpsonville</td>\n",
+       "      <td>fairview rd</td>\n",
+       "      <td>692</td>\n",
+       "      <td>29680</td>\n",
+       "      <td>sc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               city                    road house_number postcode state\n",
+       "7431   simpsonville              ne main st          924    29681    sc\n",
+       "8966   simpsonville             fairview rd          692    29680    sc\n",
+       "14361  simpsonville  north east main street          924    29681    sc\n",
+       "18614  simpsonville             fairview rd          692    29680    sc\n",
+       "19817  simpsonville            south street         1025    29681    sc\n",
+       "30658  simpsonville                south st         1025    29681    sc\n",
+       "31639  simpsonville             fairview rd          692    29680    sc\n",
+       "35700  simpsonville                south st         1025    29681    sc\n",
+       "40578  simpsonville              ne main st          924    29681    sc\n",
+       "62692  simpsonville             fairview rd          692    29680    sc"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " data[(data[\"state\"]==\"sc\") & (data[\"city\"]==\"simpsonville\")]\n",
+    "\n",
+    " # no 'fairview road' entry"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
